@@ -253,6 +253,7 @@ public:
         imageViewAction(0),
         imageWriteMetadataAction(0),
         imageReadMetadataAction(0),
+        imageScanForFacesAction(0),
         imageFindSimilarAction(0),
         imageSetExifOrientation1Action(0),
         imageSetExifOrientation2Action(0),
@@ -375,6 +376,7 @@ public:
     QAction*                            imageViewAction;
     QAction*                            imageWriteMetadataAction;
     QAction*                            imageReadMetadataAction;
+    QAction*                            imageScanForFacesAction;
     QAction*                            imageFindSimilarAction;
     QAction*                            imageSetExifOrientation1Action;
     QAction*                            imageSetExifOrientation2Action;
