@@ -221,6 +221,7 @@ public Q_SLOTS:
     void slotIconView();
     void slotImageEdit();
     void slotImageFindSimilar();
+    void slotImageScanForFaces();
     void slotImageExifOrientation(int orientation);
     void slotImageRename();
     void slotImageDelete();
