@@ -243,4 +243,5 @@ BUGFIXES:
 213 ==> 366312 - Efficient photo tagging workflow got lost in transition from 4.x to 5.
 214 ==> 395093 - Being able to export a list of paths from a selection of thumbnails.
 215 ==> 395144 - When zooming in preview, face tags show on wrong places.
-216 ==> 
+216 ==> 275671 - Scan single image for faces.
+217 ==> 
